#8029 Arreglos de problemas detectados por sonar
git-svn-id: http://scmcit.gva.es/svn/gvnix/trunk/code@1745 69435866-3869-0410-973d-9f951a852354